--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -37,7 +37,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <span class="navbar-brand" href="#">WEB322 - Mahsa Ghasemi</span>
+          <span class="navbar-brand" href="#">WEB322 - Asim Naveed</span>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
